Refactor: toList() 수정